Fix source note

--- a/Selenium-Chrome/Dockerfile
+++ b/Selenium-Chrome/Dockerfile
@@ -4,6 +4,7 @@
 #
 # Selenium with Google Chrome on Windows
 #
+# Source: https://github.com/akaer/Win-Dockerfiles/tree/main/Selenium-Chrome
 #
 # Create:
 #
