--- a/Selenium-Chrome/Dockerfile
+++ b/Selenium-Chrome/Dockerfile
@@ -12,14 +12,11 @@
 #
 # Run:
 #
-# docker run -it --rm --name win-selenium-chrome1 --hostname win-selenium-chrome1 -v ".\data:c:\data" -p 9222:9222 akaer/win-selenium-chrome
+# docker run -it --rm --name win-selenium-chrome1 --hostname win-selenium-chrome1 -v ".\data:c:\data" -p 9222:9222 akaer/win-selenium-chrome Invoke-Pester -Output Detailed
 #
 # HINTS:
-# Google Chromedriver is taken from
+# Google Chrome(driver) is taken from
 # https://googlechromelabs.github.io/chrome-for-testing/#stable
-#
-# We tried before
-# https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_win32.zip"
 #
 
 FROM mcr.microsoft.com/windows/servercore:ltsc2022
@@ -34,26 +31,27 @@ COPY files\\register-fonts.ps1 c:\\windows\\temp
 
 RUN Expand-Archive c:\windows\temp\Fonts.zip -DestinationPath c:\windows ; `
 	c:\windows\temp\register-fonts.ps1 ; `
-	Remove-Item C:\Windows\Temp\Fonts.zip ; `
-	Remove-Item C:\Windows\Temp\register-fonts.ps1 ; `
+	Remove-Item C:\windows\temp\Fonts.zip ; `
+	Remove-Item C:\windows\temp\register-fonts.ps1 ; `
 	Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force ; `
 	Install-Module Pester -SkipPublisherCheck -Force ; `
-	Install-Module Selenium,PSScriptAnalyzer -Force ; `
-	Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+	Install-Module Selenium,PSScriptAnalyzer -Force
 
-RUN choco install googlechrome -y -q ; `
-	Invoke-WebRequest -Uri "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/118.0.5993.70/win32/chromedriver-win32.zip" -OutFile "c:\windows\temp\chromedriver_win32.zip" ; `
-	Expand-Archive "c:\windows\temp\chromedriver_win32.zip" -DestinationPath "c:\windows" ; `
-	Remove-Item "c:\windows\temp\chromedriver_win32.zip" ; `
-	Copy-Item 'C:\Windows\chromedriver-win32\chromedriver.exe' -Destination 'C:\Program Files\WindowsPowerShell\Modules\Selenium\3.0.1\assemblies' -Force ; `
+RUN $ChromeVersionFile = 'c:\chromeversion.txt' ; `
+	Invoke-WebRequest -Uri "https://googlechromelabs.github.io/chrome-for-testing/LATEST_RELEASE_STABLE" -OutFile $ChromeVersionFile ; `
+	$ChromeVersion = Get-Content -Path $ChromeVersionFile ; `
+	Invoke-WebRequest -Uri "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/$ChromeVersion/win32/chromedriver-win32.zip" -OutFile 'c:\windows\temp\chromedriver_win32.zip' ; `
+	Invoke-WebRequest -Uri "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/$ChromeVersion/win32/chrome-win32.zip" -OutFile 'c:\windows\temp\chrome_win32.zip' ; `
+	Expand-Archive 'c:\windows\temp\chromedriver_win32.zip' -DestinationPath 'c:\windows' ; `
+	Expand-Archive 'c:\windows\temp\chrome_win32.zip' -DestinationPath 'c:\windows' ; `
+	Remove-Item 'c:\windows\temp\chromedriver_win32.zip' ; `
+	Remove-Item 'c:\windows\temp\chrome_win32.zip' ; `
+	Copy-Item 'c:\windows\chromedriver-win32\chromedriver.exe' -Destination 'c:\Program Files\WindowsPowerShell\Modules\Selenium\3.0.1\assemblies' -Force ; `
 	New-Item -Path 'c:\' -Name 'data' -ItemType 'directory' > $NULL ; `
-	$oldpath = (Get-ItemProperty -Path 'Registry::HKEY_LOCAL_MACHINE\System\CurrentControlSet\Control\Session Manager\Environment' -Name 'Path').Path ; `
-	$chromePath = 'C:\Program Files\Google\Chrome\Application' ; `
-	$newpath = "${oldpath};${chromePath}" ; `
-	Set-ItemProperty -Path 'Registry::HKEY_LOCAL_MACHINE\System\CurrentControlSet\Control\Session Manager\Environment' -Name 'Path' -Value "${newPath}"
+	[Environment]::SetEnvironmentVariable('Path', 'c:\windows\chrome-win32;' + $env:Path, 'Machine')
 
 VOLUME [ "c:\\data" ]
-WORKDIR c:\\data
+WORKDIR "c:\\data"
 
 EXPOSE 9222
 
